fixed collapsed text

--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,3 +1,11 @@
+.product-header h1 {
+  text-align: center;
+  padding-top: 2rem;
+  font-family: 'secular one';
+  letter-spacing: 0.4rem;
+  text-transform: uppercase;
+}
+
 .products-container {
   font-family: 'Montserrat';
   width: 100%;
@@ -6,14 +14,7 @@
   justify-content: center;
   flex-direction: column;
   padding: 0;
-}
-
-.products-container h1 {
-  text-align: center;
-  padding-top: 2rem;
-  font-family: 'secular one';
-  letter-spacing: 0.4rem;
-  text-transform: uppercase;
+  margin-bottom: 1rem;
 }
 
 .outdoor-content {
@@ -35,6 +36,7 @@
   letter-spacing: 0.4rem;
   text-transform: uppercase;
 }
+
 .outdoor-text {
   font-size: 1rem;
   padding-top: 0.5rem;
